student component and stying

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,10 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto")
+@import "./styles/colors.sass"
+
 body
-  margin: 100
-  padding: 100
+  font-family: 'Roboto', Helvetica, Arial, sans-serif
+  margin: 0
+  padding: 0
   font-family: sans-serif
+  background-color: rgba($blue, .2)
+  color: $black
