--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 body {
-  margin: 100;
-  padding: 100;
-  font-family: sans-serif; }
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: rgba(73, 144, 226, 0.2);
+  color: #343434; }
