--- a/src/students/Student.css
+++ b/src/students/Student.css
@@ -1,5 +1,35 @@
-.Student ul {
-  list-style: none; }
-
-.Student img.Student-Photo {
-  height: 1rem; }
+article.Student {
+  flex: 1;
+  border-radius: .1em;
+  overflow: hidden;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.117647), 0 1px 4px rgba(0, 0, 0, 0.117647);
+  display: flex;
+  flex-direction: column;
+  margin: 1em .8em;
+  background-color: #fff;
+  padding: 2.2em; }
+  @media (min-width: 769px) {
+    article.Student {
+      margin: .8em;
+      min-width: calc(45% - 4.4rem);
+      flex-shrink: 1; } }
+  article.Student main, article.Student footer {
+    padding: 10px 0;
+    min-width: calc(100% - 1.6rem); }
+  article.Student footer {
+    align-items: flex-end;
+    display: flex;
+    flex: 1; }
+  article.Student header .cover {
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+    overflow: hidden;
+    margin-bottom: 54px; }
+    article.Student header .cover img {
+      height: 100px; }
+  article.Student header h1 {
+    margin: 20px 0; }
+  article.Student .categories {
+    margin: -60px 20px 0 0;
+    float: right; }
