--- a/src/students/Student.sass
+++ b/src/students/Student.sass
@@ -1,6 +1,44 @@
-.Student
-  ul
-   list-style: none
-   
-  img.Student-Photo
-   height: 1rem
+@import "../styles/breakpoints.sass"
+
+article.Student
+  flex: 1
+  border-radius: .1em
+  overflow: hidden
+  box-shadow: 0 1px 6px rgba(0,0,0,.117647),0 1px 4px rgba(0,0,0,.117647)
+  display: flex
+  flex-direction: column
+  margin: 1em .8em
+  background-color: #fff
+  padding: 2.2em
+
+  @include breakpoint($breakpoint-medium)
+    margin: .8em
+    min-width: calc(45% - 4.4rem)
+    flex-shrink: 1
+
+  main, footer
+    padding: 10px 0
+    min-width: calc(100% - 1.6rem)
+
+  footer
+    align-items: flex-end
+    display: flex
+    flex: 1
+
+  header
+    .cover
+      height: 200px
+      background-size: cover
+      background-position: center center
+      overflow: hidden
+      margin-bottom: 54px
+
+      img
+        height: 100px
+
+    h1
+      margin: 20px 0
+
+  .categories
+    margin: -60px 20px 0 0
+    float: right
